<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/a2"
    android:orientation="vertical"
    tools:context="com.example.knutsen.steemy.SettingsActivity"

    >


    <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/handwriting"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/b5"
        android:textSize="55sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/button8"
        android:layout_alignTop="@+id/button5"
        android:background="@color/off"
        android:fontFamily="@font/handwriting"
        android:text="@string/lightsOff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:background="@color/off"
        android:fontFamily="@font/handwriting"
        android:text="@string/turnSaunaOff"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_alignTop="@+id/button7"
        android:layout_toStartOf="@+id/button7"
        android:background="@color/on"
        android:fontFamily="@font/handwriting"
        android:text="@string/TurnOnMusic"
        android:textSize="16sp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="133dp"
        android:background="@color/on"
        android:fontFamily="@font/handwriting"
        android:text="@string/turnSaunaOn"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/button6"
        android:layout_toEndOf="@+id/button5"
        android:background="@color/on"
        android:fontFamily="@font/handwriting"
        android:text="@string/lightsOn"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_alignStart="@+id/button6"
        android:layout_alignTop="@+id/button2"
        android:background="@color/off"
        android:fontFamily="@font/handwriting"
        android:text="@string/TurnOffMusic"
        android:textSize="16sp" />

</android.widget.RelativeLayout>
